2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* blockframe.c (generic_find_dummy_frame): Change return type to
	``struct regcache''.
	(struct dummy_frame): Replace field ``registers'' with regcache, a
	struct regcache object.
	(generic_find_dummy_frame): Update.
	(generic_push_dummy_frame): Update.  Use regcache_xfree,
	regcache_xmalloc and regcache_cpy.
	(generic_pop_dummy_frame): Update.  Use regcache_cpy and
	regcache_xfree.
	(deprecated_generic_find_dummy_frame): Update.
	(generic_read_register_dummy): Update.  Use
	regcache_read_as_address.
	(generic_call_dummy_register_unwind): Update.  Use regcache_read.
	(generic_get_saved_register): Update.  Use regcache_read.

2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (objfiles_h): Add $(bcache_h).
	* objfiles.h: Include "bcache.h".

	* Makefile.in (symtab_h): Remove $(bcache_h).
	* symtab.h: Do not include "bcache.h".

2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* ppcnbsd-tdep.c (ppcnbsd_init_abi): Set frame_chain_valid to
	generic_func_frame_chain_valid.

2002-06-28  David O'Brien  <obrien@FreeBSD.org>

	* config/i386/nm-fbsd.h: Include <sys/param.h>.
	* config/i386/tm-fbsd.h: Likewise.

2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): Use
	generic_unwind_get_saved_register.

2002-06-27  Andrew Cagney  <ac131313@redhat.com>

	From 2002-06-27 John David Anglin <dave@hiauly1.hia.nrc.ca>:
	* regcache.c (supply_register): Add missing argument to
	register_buffer call.

2002-06-27  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (init.c): Drop -e option to grep.  Not necessary and
	Solaris /bin/grep does not not like it.  From Peter Schauer.

2002-06-26  Tom Tromey  <tromey@redhat.com>

	* command.h (add_setshow_cmd): Declare.
	(add_setshow_cmd_full): Declare.
	* cli/cli-decode.c (add_setshow_cmd): No longer static.  Now
	returns void.  Use add_setshow_cmd_full.
	(add_setshow_cmd_full): New function.